--- a/Atividade01_ME623.Rmd
+++ b/Atividade01_ME623.Rmd
@@ -21,7 +21,7 @@ Sendo:
   
   
   
-Temos duas medições para cada UE de maneira que estes dados são pareados. Temos 20 UE's amostrados. Estamos supondo que os dados vêm de populações normais e que $\sigma_d = \sigma_e$. Então devemos utilizar, neste caso, o teste T Pareado assumindo que as variâncias populacionais são iguais:
+Temos duas medições para cada UE, de maneira que estes dados são pareados. Temos 20 UE's amostrados. Estamos supondo que os dados vêm de populações normais e que $\sigma_d = \sigma_e$. Então devemos utilizar, neste caso, o teste T Pareado assumindo que as variâncias populacionais são iguais:
 
 Realizamos o teste manualmente (passo a passo) e conferimos o resultado com a função *$t.test$* dísponivel.
 
@@ -38,7 +38,7 @@ Sob a Hipótese nula temos que
 $$
 X_d - X_e = Y \sim N(0,\sigma^2_y)
 $$
-onde $\sigma^2_y = \sigma^2_e + \sigma^2_d$ e $n = n_d + n_e$
+onde $\sigma^2_y = \sigma^2_e + \sigma^2_d -2*COV(X_d,X_e)$ e $n = n_d + n_e$
 
 ##Estatística do teste:
 
@@ -64,12 +64,10 @@ ny = 20
 diferenca = amostra$dados.d-amostra$dados.e
 varY = var(diferenca)
 T = mean(diferenca)/sqrt(varY/ny)
-T
 p.valor = 1 - pt(abs(T),ny-1) + pt(-abs(T),ny-1)
-p.valor
 ```
 
-Substituindo os valores na estatística de teste escolhida, obtemos a um um nível de significância de *0.05*:
+Substituindo os valores na estatística de teste:
 
 $$
 T =\frac{`r round(mean(diferenca),3)`}{\sqrt{\frac{`r round(varY,3)`}{`r ny`}}} = `r round(T,3)`
@@ -82,7 +80,7 @@ $$
 P(T>\left | t \right |) + P(T<-\left | t \right |) = 1 - P(T<\left | t \right |) + P(T<-\left | t \right |) = `r p.valor`
 $$
 
-Temos uma probabilidade de **$`r p.valor`$** de se obter uma estatística de teste igual ou mais extrema que a que observamos na amostra, sob a hipótese nula.
+Temos uma probabilidade de **$`r p.valor`$** de se obter uma estatística de teste igual ou mais extrema que a que observamos na amostra, sob a hipótese nula. Obtemos a um um nível de significância de *0.05* o seguinte resultado: temos fortes evidências para *Rejeitarmos* a hipótese nula de que as médias populacionais dos pontos obtidos com a mão direita e com a mão esquerda são iguais.
 
 
 #Cálculo utilizando função *"t.test"*
@@ -99,6 +97,6 @@ teste
 Utilizando a função *t.test*, temos como resultado um p-valor $\approx$ **`r round(pvalor*100,2)`%** o que indica que temos fortes evidências para **`r ifelse(pvalor<alfa,"Rejeitarmos","Não Rejeitarmos")`** a hipótese nula de que as médias populacionais dos pontos obtidos com a mão direita e com a mão esquerda são iguais.
 
 #Conclusão Geral
-Pode-se observar que em ambos os métodos (cálculo manual e cálculo via função t.test) obtemos os mesmos resultados, ou seja, um **$t_obs=5.195$** e um **$p.valor=5.148e^-05$**, como o **$p.valor$** é extremamente baixo, podemos afirmar com um nivel de confiança de *95%* que temos fortes evidências contra a hipótese nula de que o não existe diferença de performance entre a mão direita e a mão esquerda no teste de lateralidade.
+Pode-se observar que em ambos os métodos (cálculo manual e cálculo via função t.test) obtemos os mesmos resultados, ou seja, um **$t_obs=5.195$** e um **$p.valor=5.148e^-05$**. Como o **$p.valor$** é extremamente baixo, podemos afirmar com um nivel de confiança de *95%* que temos fortes evidências contra a hipótese nula de que existe diferença de performance entre a mão direita e a mão esquerda no teste de lateralidade.
 
 
