--- a/Trabalhoexperimental/experimento.rmd
+++ b/Trabalhoexperimental/experimento.rmd
@@ -7,24 +7,23 @@ output: pdf_document
 
 #Motivação
   
-   Dezembro é o mês de festas, época em que há um grande aumento do consumo de alcool, o que levanta a velha discussão sobre os riscos decorrentes da ingestão de alcool. 
-    Um dos principais riscos decorrentes do consumo de alcool é a perda de reflexos, o que favorece a ocorrência de acidentes.
-    Contudo uma questão bastante relevante é se essa perda é decorrente somente da quantidade ingerida ou se há outros fatores que influenciam significativamente nessa perda. 
-    O nosso experimento propõe dois possíveis fatores: o sexo (masculino e feminino) e ingestão de alcool alternada (com água, petiscos). 
-    A idéia do nosso experimento é analisar o quão influente são esses fatores na perda de reflexo. E ver qual a combinação têm maior influência na perda de reflexo, ou se estes tratamentos são equivalentes quanto a perda de reflexo.
+   Em algumas épocas festivas do ano, ocorre um grande aumento do consumo de alcool, o que levanta a discussões sobre os riscos decorrentes da ingestão de alcool. 
+    Um dos principais efeitos decorrentes do consumo de alcool é a perda de reflexos, o que favorece a ocorrência de diversos tipos de acidentes.Contudo uma questão bastante relevante é se essa perda é decorrente somente da quantidade ingerida de álcool ou se há outros fatores que influenciam significativamente. 
+    O nosso experimento propõe dois possíveis fatores: o sexo (masculino e feminino) e tipo de ingestão de alcool. 
     
 #Objetivo
 
-  Este trabalho têm como objetivo identificar se existe relação na capacidade de reação entre sexos e entre os fatores "ingestão de álcool e água de forma alternada", "ingestão de álcool e consumo de petiscos", "ingestão somente de álcool".
+O objetivo do nosso experimento é verificar se o sexo e o tipo de ingestão influenciam na perda de reflexo.
+Veremos também se existe iteração entre eles.
 
 #Planejamento
+  O experimento consiste em aferir o efeito dos tratamentos na variável resposta.
+  A variável resposta, capacidade de reação (reflexo), será mensurada por um teste de reflexo disponível em **"http://www.brainmetrix.com/reflex-test/"**. A medida será obtida a partir da diferença de pontos obtidos antes e após 1h à ingestão do álcool. O intervalo de 1 hora permite total absorção da bebida pelo o corpo.
   
-  O experimento consiste em realizar o teste de reflexo disponível em $"http://www.brainmetrix.com/reflex-test/"$ antes de ingerir bebida e após decorrido 1h da ingestão. A variável resposta é a diferença entre os pontos obtidos antes e depois.O intervalo de 1 hora permite total absorção da bebida pelo o corpo.
-  
-  Pesquisas anteriores revelam indícios de relação entre a quantidade ingerida de álcool e o porte físico da pessoa. Porém não é de interesse do nosso experimento verificar tal relação, então é razoável considerar o porte fisíco do indivíduo como um fator ruído. Para quantificar este fator, vamos utilizar o Índice de Massa Corporal (IMC), medida essa que leva em consideração o peso e altura respeitando a seguinte razão:
+  Pesquisas anteriores revelam indícios de relação entre a quantidade ingerida de álcool e o porte físico da pessoa. Porém não é de interesse do nosso experimento verificar tal relação, então é razoável considerar o porte fisíco do indivíduo como um fator ruído. Para quantificar este fator, vamos utilizar o Índice de Massa Corporal (IMC), medida essa que leva em consideração o peso e altura respeitando a seguinte relação:
   $$IMC=\frac{Peso}{Altura^2}$$
-   
-  A fim de tentar minimizar a influência da relação supracitada sobre o experimento.  Consideraremos no experimento os seguintes intervalos de IMC como fator ruído:
+  
+  A fim de tentar minimizar a influência da relação supracitada sobre o experimento,  consideraremos no experimento os seguintes intervalos de IMC como blocos:
 
 ```{r, echo=FALSE}
 
@@ -39,18 +38,21 @@ kable(tab_imc)
 
 ```
 
-   Devemos ter em mente que a alimentação, estilo de vida e genética do indivíduo também podem influênciar nos resultados, porém dado as limitações financeiras, temporais e tecnológicas em que o experimento será realizado, nos atemos somente a tentar minimizar estes efeitos e não controla-los.
-   Note que blocagem por indivíduo não é possível, dado que o sexo do indivíduo é um fator, então a medida adotada para minimizar estes efeitos será orientar os participantes do experimento a não ingerir nenhum tipo de bebida alcóolica nos dois dias antecedentes ao dia da realização do experimento e a dormir bem(por volta de 8 horas).Em caso de impossibilidade de seguir as recomendações, os indivíduos deverão avisar os experimentadores para que uma observação quanto a isso seja feita no trabalho.
+  Portanto, cada indivíduo será submetido somente uma vez e em apenas um tratamento. A tipo de ingestão será aleatorizado dentro de cada bloco, respeitando o limite de três tipos de ingestão para cada sexo em cada bloco.  
+   Devemos ter em mente que a alimentação, estilo de vida e genética do indivíduo também podem influênciar nos resultados, porém dado as limitações financeiras e temporais em que o experimento será realizado, nos atemos somente a tentar minimizar estes efeitos e não controla-los. Note que blocagem por indivíduo não é possível, dado que o sexo do indivíduo é um fator, então a medida adotada para minimizar estes efeitos será orientar os participantes do experimento a não ingerir nenhum tipo de bebida alcóolica e dormir por volta de 8 horas nos dois dias antecedentes ao dia da realização do experimento, assim como, se alimentar bem no dia do experimento. Em caso de impossibilidade de seguir as recomendações, os indivíduos deverão avisar os experimentadores para que uma observação quanto a isso seja feita no trabalho.
   
   
 #Delineamento experimental
-Para realizar as análises, o delineamento que vamos utilizar é **Blocagem em Experimentos Fatoriais**., onde o experimento fatorial tem dois fatores, o fator A é o sexo do indivíduo e o fator B é tipo de ingestão.
+Para realizar as análises, o delineamento que vamos utilizar é **Blocagem em Experimentos Fatoriais**. 
+Neste caso, o experimento fatorial tem dois fatores, o fator A é o sexo do indivíduo e o fator B é tipo de ingestão.
 
 O fator A tem dois níveis, feminino e masculino, e o fator B tem 3 níveis, apenas ingerir alcool (1), ingerir alcool e beber água(2), ingerir e comer um petisco(3).
 
-O tratamento será o teste de reflexo.
+O tratamento será a combinação dos níveis dos fatores A e B.
 
-Dado o delineamento de experimento escolhido. Usaremos o seguinte modelo:
+OS blocos serão os 3 níveis de IMC.
+
+Dado o delineamento de experimento escolhido, usaremos o seguinte modelo:
 
 $$Y_{ijk}=\mu+\tau_i+\beta_j+(\tau\beta)_{ij}+\delta_k+\varepsilon_{ijk}\left\{\begin{matrix}
 i=1,2,3\\ 
@@ -60,20 +62,33 @@ k=1,2
 
 onde $\delta_k$ representa o efeitos do k-ésimo IMC.
 
+
+
 Nossas observações serão dispostas da seguinte forma:
 
 \begin{table}[!h]
 \centering
+\caption{Apresentação dos dados}
 \label{my-label}
-\begin{tabular}{cclllclllclll}
-\multicolumn{1}{l}{} & \multicolumn{12}{c}{OBSERVAÇÕES}                                                                                                                                                                                                                                                                                      \\
-                     & \multicolumn{4}{c}{IMC 1}                                                                             & \multicolumn{4}{c}{IMC2}                                                                              & \multicolumn{4}{c}{IMC3}                                                                              \\
-                     & \multicolumn{4}{c}{Sexo}                                                                              & \multicolumn{4}{c}{Sexo}                                                                              & \multicolumn{4}{c}{Sexo}                                                                              \\
-                     & \multicolumn{2}{c}{F}                                 & \multicolumn{2}{c}{M}                         & \multicolumn{2}{c}{F}                                 & \multicolumn{2}{c}{M}                         & \multicolumn{2}{c}{F}                                 & \multicolumn{2}{c}{M}                         \\
-Tipo de Ingestão     & A                             & \multicolumn{1}{c}{D} & \multicolumn{1}{c}{A} & \multicolumn{1}{c}{D} & A                             & \multicolumn{1}{c}{D} & \multicolumn{1}{c}{A} & \multicolumn{1}{c}{A} & A                             & \multicolumn{1}{c}{D} & \multicolumn{1}{c}{A} & \multicolumn{1}{c}{D} \\
-1                    & \multicolumn{1}{l}{$y_{111}$} & $y_{111}$             & $y_{121}$             & $y_{121}$             & \multicolumn{1}{l}{$y_{112}$} & $y_{112}$             & $y_{122}$             & $y_{122}$             & \multicolumn{1}{l}{$y_{113}$} & $y_{113}$             & $y_{123}$             & $y_{123}$             \\
-2                    & \multicolumn{1}{l}{$y_{211}$} & $y_{211}$             & $y_{221}$             & $y_{221}$             & \multicolumn{1}{l}{$y_{212}$} & $y_{212}$             & $y_{222}$             & $y_{222}$             & \multicolumn{1}{l}{$y_{213}$} & $y_{213}$             & $y_{223}$             & $y_{223}$             \\
-3                    & \multicolumn{1}{l}{$y_{311}$} & $y_{311}$             & $y_{321}$             & $y_{321}$             & \multicolumn{1}{l}{$y_{312}$} & $y_{312}$             & $y_{322}$             & $y_{322}$             & \multicolumn{1}{l}{$y_{313}$} & $y_{313}$             & $y_{323}$             & $y_{323}$            
+\begin{tabular}{c|c|l|l|l|c|l|l|l|c|l|l|l|}
+\cline{2-13}
+\multicolumn{1}{l|}{}                  & \multicolumn{12}{c|}{OBSERVAÇÕES}                                                                                                                                                                                                                                                                                                 \\ \cline{2-13} 
+                                       & \multicolumn{4}{c|}{IMC 1}                                                                                & \multicolumn{4}{c|}{IMC2}                                                                                 & \multicolumn{4}{c|}{IMC3}                                                                                 \\ \cline{2-13} 
+                                       & \multicolumn{4}{c|}{Sexo}                                                                                 & \multicolumn{4}{c|}{Sexo}                                                                                 & \multicolumn{4}{c|}{Sexo}                                                                                 \\ \hline
+\multicolumn{1}{|c|}{}                 & \multicolumn{2}{c|}{F}                                  & \multicolumn{2}{c|}{M}                          & \multicolumn{2}{c|}{F}                                  & \multicolumn{2}{c|}{M}                          & \multicolumn{2}{c|}{F}                                  & \multicolumn{2}{c|}{M}                          \\ \hline
+\multicolumn{1}{|c|}{Tipo de Ingestão} & A                              & \multicolumn{1}{c|}{D} & \multicolumn{1}{c|}{A} & \multicolumn{1}{c|}{D} & A                              & \multicolumn{1}{c|}{D} & \multicolumn{1}{c|}{A} & \multicolumn{1}{c|}{A} & A                              & \multicolumn{1}{c|}{D} & \multicolumn{1}{c|}{A} & \multicolumn{1}{c|}{D} \\ \hline
+\multicolumn{1}{|c|}{1}                & \multicolumn{1}{l|}{$y_{111}$} & $y_{111}$              & $y_{121}$              & $y_{121}$              & \multicolumn{1}{l|}{$y_{112}$} & $y_{112}$              & $y_{122}$              & $y_{122}$              & \multicolumn{1}{l|}{$y_{113}$} & $y_{113}$              & $y_{123}$              & $y_{123}$              \\ \hline
+\multicolumn{1}{|c|}{2}                & \multicolumn{1}{l|}{$y_{211}$} & $y_{211}$              & $y_{221}$              & $y_{221}$              & \multicolumn{1}{l|}{$y_{212}$} & $y_{212}$              & $y_{222}$              & $y_{222}$              & \multicolumn{1}{l|}{$y_{213}$} & $y_{213}$              & $y_{223}$              & $y_{223}$              \\ \hline
+\multicolumn{1}{|c|}{3}                & \multicolumn{1}{l|}{$y_{311}$} & $y_{311}$              & $y_{321}$              & $y_{321}$              & \multicolumn{1}{l|}{$y_{312}$} & $y_{312}$              & $y_{322}$              & $y_{322}$              & \multicolumn{1}{l|}{$y_{313}$} & $y_{313}$              & $y_{323}$              & $y_{323}$              \\ \hline
 \end{tabular}
 \end{table}
 
+**Legenda:**
+
+*F: Feminino*  
+*M: Masculino*  
+*A: Antes*   
+*D: Depois*  
+*1: Apenas ingestão de álcool*  
+*2: Ingestão de álcool e água*  
+*3: Ingestão de álcool e petiscos*  
